[metadata]
name = quickbase-json-api-client
version = 0.1.3
author = Robert Carroll
author_email = rob@shenandoah.capital
description = Python wrapper for quickbase JSON API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robswc/quickbase-json-api-client
project_urls =
    Bug Tracker = https://github.com/robswc/quickbase-json-api-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src